envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/upload" }
                          route:
                            cluster: file_service
                        - match: { prefix: "/static" }
                          route:
                            cluster: file_service
                        - match: { prefix: "/zbay" }
                          route:
                            cluster: zbay_service
                            max_grpc_timeout: 0s
                        - match: { prefix: "/dawn" }
                          route:
                            cluster: dawn_service
                            max_grpc_timeout: 0s
                        - match: { prefix: "/" }
                          route:
                            cluster: web_service
                      cors:
                        allow_origin:
                          - "*"
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,authorization-token,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: authorization-token,grpc-status,grpc-message
                        enabled: true
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router
  clusters:
    - name: zbay_service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: zbay
            port_value: 50051
    - name: dawn_service
      connect_timeout: 0.25s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: dawn
            port_value: 50051
    - name: file_service
      connect_timeout: 10s
      type: logical_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: zbay
            port_value: 9090
    - name: web_service
      connect_timeout: 10s
      type: logical_dns
      lb_policy: round_robin
      hosts:
        - socket_address:
            address: web
            port_value: 80
